fix(Addresses): prevent last address menu from getting cut off

--- a/assets/css/modules/_settings.scss
+++ b/assets/css/modules/_settings.scss
@@ -88,7 +88,7 @@
 .inneredit { padding: 10px 15px 0;}
 
 table.accounts-container {
-
+  margin-bottom: 40px;
   tr {
     height: 80px;
     &:first-child td {
